--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-1.09MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-179.3KB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-333.4KB/s(Youtube:不良林), server: 194.156.231.248, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-597.4KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇯🇵 日本-238.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-947.9KB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-334.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-291.5KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇺🇸 美国-876.4KB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
+  - {name: 🇺🇸 美国-179.3KB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-408.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-643.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-274.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-490.9KB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-215.2KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活4天)香港-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-333.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-597.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-238.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-179.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-408.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
