--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-947.9KB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-274.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-233.5KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-215.2KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-298.4KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-231.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-255.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-491.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-233.5KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-316.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-537.0KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 台湾-1.35MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇺🇸 美国-1007.5KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-947.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-906.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-233.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
